Bug 429811 - Tag container isn't updated immediately when bookmark is removed (r=mano, a=mconnor)